# pg_durable

./: .env.example  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  NOTICE  README.md  TODO.md  USER_GUIDE.md  build.rs  current_status.md  docker-compose.yml  pg_durable.control  run-e2e-tests.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh  postCreateCommand.sh
.github/: copilot-instructions.md  dependabot.yml
.github/actions/docker-build-smoke/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker-publish.yml  docker.yml  fix-pr-pass-ci.lock.yml  fix-pr-pass-ci.md  package-release.yml  pages.yml  prebuild.yml
docker-entrypoint-initdb.d/: 01-init-pg-durable.sh
docs/: ARCHITECTURE.md  CODESPACES_PREBUILDS.md  DUROXIDE_PG_DEADLOCK_ISSUE.md  E2E_TESTING.md  INTEGRATION_TEST_PLAN.md  TESTING.md  TEST_SPEC.md  USER_GUIDE_FUTURE.md  api-reference.md  bgw-applies-migrations.md  dep_issues.md  design-azure-functions.md  extension_lifecycle.md  grammar.md  http-allowlist-review.md  http-security.md  multi-database.md  nested-graph-design.md  parameterized_queries_proposal.md  pg_durable_mvp.md  pgai-vectorizer-durable-functions.md  proposal-management-api.md  rls.md  spec-compensation.md  spec-http-function-permissions.md  spec-pg-regress.md  spec-security-model.md  spec-signals.md  upgrade-testing.md  user-isolation-review.md  user-isolation.md
docs/security-review/: ThreatModelDFD.md  threat-model.dfd-lite.yaml
docs/website/: index.html  styles.css
examples/azure-functions/: README.md
examples/azure-functions/function-app/: requirements.txt
examples/azure-functions/scripts/: README.md  cleanup_azure.sh  configure_pg.sh  create_function_app.sh  deploy_function.sh  smoke_check.sh
examples/azure-functions/sql/: 01_schema.sql  02_set_vars.sql  03_start_workflow.sql  04_verify.sql  README.md
examples/azure-http-domains/scripts/: cleanup.sh  common.sh  provision.sh  run-test.sh  smoke_check.sh
examples/invoice-approval/: .gitignore  README.md  without-df.md
examples/invoice-approval/scripts/: cleanup_azure.sh  configure_pg.sh  create_function_app.sh  deploy_function.sh  feed_invoices.sh  live_smoke_check.sh  smoke_check.sh
examples/invoice-approval/sql/: 01_schema.sql  02_set_vars.sql  03_seed_data.sql  04_explain.sql  05_start_workflow.sql  06_monitor.sql  07_approve.sql  08_explain_live.sql  09_verify.sql  10_cancel.sql  11_reset.sql
expected/: 00_init.out  conditional.out  parallel.out  sequence.out  simple.out  variables.out
pg_durable_ext/: Cargo.toml  pg_durable_ext.control
pg_durable_ext/src/: lib.rs
pg_durable_ext/tests/pg_regress/sql/: setup.sql
prompts/: README.md  pg_durable-check-upstream-fixes.md  pg_durable-clean-warnings.md  pg_durable-create-scenario-test.md  pg_durable-merge-main.md  pg_durable-release.md  pg_durable-update-docs-tests.md
scripts/: deploy-acr.sh  gen-duroxide-install-sql.sh  measure-memory.sh  package-deb.sh  pg-common.sh  pg-reset.sh  pg-start.sh  pg-stop.sh  pgrx-setup.sh  pgrx-stop.sh  run-pgspot.sh  test-all-local.sh  test-connlimit-e2e.sh  test-coverage.sh  test-e2e-docker.sh  test-e2e-local.sh  test-unit.sh  test-upgrade.sh  test.sh  validate-deb-package.sh  verify-duroxide-migrations.sh
sql/: 00_init.sql  conditional.sql  duroxide_install.sql  parallel.sql  pg_durable--0.1.1--0.2.0.sql  pg_durable--0.1.1.sql  pg_durable--0.2.0--0.2.1.sql  pg_durable--0.2.1--0.2.2.sql  pg_durable--0.2.3--0.2.4.sql  pg_durable--0.2.4--0.2.5.sql  sequence.sql  simple.sql  variables.sql
sql/duroxide_upstream/: 0001_initial_schema.sql  0002_add_deletion_and_pruning_support.sql  0003_add_capability_filtering.sql  0004_add_session_support.sql  0005_add_custom_status.sql
src/: client.rs  dsl.rs  explain.rs  lib.rs  monitoring.rs  registry.rs  runtime.rs  ssrf.rs  types.rs  worker.rs
src/activities/: execute_http.rs  execute_multipart.rs  execute_sql.rs  load_function_graph.rs  mod.rs  update_instance_status.rs  update_node_status.rs
src/orchestrations/: execute_function_graph.rs  mod.rs
test/regress/: Makefile  README.md
test/regress/expected/: conditional.out  parallel.out  sequence.out  simple.out  variables.out
test/regress/sql/: conditional.sql  parallel.sql  sequence.sql  simple.sql  variables.sql
tests/e2e/: run.sh
tests/e2e/sql/: 00_requires_shared_preload.sql  00_setup_playground.sql  01_core_primitives.sql  01_simple_sql.sql  02_conditionals.sql  02_sequence.sql  03_loops.sql  03_variables.sql  04_parallel_join.sql  04_variables_and_results.sql  05_conditional_true.sql  05_monitoring_and_explain.sql  06_conditional_false.sql  06_http_and_ssrf.sql  07_signals.sql  07_sleep.sql  08_loop_cancel.sql  08_scenarios.sql  09_graph_and_validation.sql  09_monitoring.sql  10_connection_limits.sql  10_explain.sql  11_cross_connection.sql  11_scenario_etl.sql  12_extension_lifecycle.sql  12_scenario_parallel_counts.sql  13_scenario_conditional_load.sql  13_user_isolation.sql  14_database.sql  14_scenario_order_processing.sql  15_rls.sql  15_scenario_three_step.sql  16_heartbeat.sql  16_scenario_join3.sql  17_race.sql  17_superuser_guc.sql  18_delegated_grants.sql  (+35 more)
(+17 files in other folders)
