[package]
name = "pg_durable"
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Azure/pg_durable"
description = "Durable SQL Functions for PostgreSQL"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_durable"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
http-allow-all = []
http-allow-azure-domains = []
http-allow-test-domains = ["http-allow-azure-domains"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
unsafe = ["pgrx/unsafe-postgres"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# duroxide integration
duroxide = "=0.1.28"
duroxide-pg-opt = { path = "duroxide-pg-opt", package = "duroxide-pg-opt" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# For ExecuteSQL activity (connecting back to PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "bigdecimal", "uuid", "chrono"] }
bigdecimal = "0.4"

# For cron expression parsing (wait_for_schedule)
cron = "0.13"
chrono = "0.4"

# For HTTP requests (df.http)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# For duroxide tracing integration
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
